--- a/custom-addons/hr_pay_grade/views/hr_pay_grade_view.xml
+++ b/custom-addons/hr_pay_grade/views/hr_pay_grade_view.xml
@@ -8,17 +8,17 @@
             <form string="Pay Grade">
                 <sheet>
                     <group>
-                        <field name="job_position_id" required="1" />
-                        <field name="pay_grade" required="1" />
-                        <field name="base_salary" required="1" />
-                        <field name="ceiling_salary" required="1" />
+                        <field name="job_position_id" required="1" string="Job Position" />
+                        <field name="pay_grade" required="1" string="Grade Level" />
+                        <field name="base_salary" required="1" string="Base Salary" />
+                        <field name="ceiling_salary" required="1" string="Ceiling Salary" />
                     </group>
                     <notebook>
                         <page string="Increment Steps">
                             <field name="increment_steps">
                                 <tree editable="bottom">
-                                    <field name="increment" />
-                                    <field name="salary" />
+                                    <field name="increment" string="Step Level" />
+                                    <field name="salary" string="Incremented Salary" />
                                 </tree>
                             </field>
                         </page>
@@ -34,10 +34,10 @@
         <field name="model">hr.pay.grade</field>
         <field name="arch" type="xml">
             <tree string="Pay Grades">
-                <field name="job_position_id" />
-                <field name="pay_grade" />
-                <field name="base_salary" />
-                <field name="ceiling_salary" />
+                <field name="job_position_id" string="Job Position" />
+                <field name="pay_grade" string="Grade Level" />
+                <field name="base_salary" string="Base Salary" />
+                <field name="ceiling_salary" string="Ceiling Salary" />
             </tree>
         </field>
     </record>
@@ -59,16 +59,12 @@
         <field name="model">hr.contract</field>
         <field name="inherit_id" ref="hr_contract.hr_contract_view_form" />
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='wage']" position="before">
-                <group>
-                    <field name="pay_grade_id" options="{'no_open': True, 'no_create': True}" />
-                    <field name="increment_level_id" options="{'no_open': True, 'no_create': True}" />
-                </group>
-            </xpath>
-            <xpath expr="//field[@name='wage']" position="attributes">
-                <attribute name="readonly">True</attribute>
-            </xpath>
+            <field name="contract_type_id" position="before">
+                <field name="pay_grade_id" string="Pay Grade"
+                    options="{'no_open': True, 'no_create': True}" />
+                <field name="increment_level_id" string="Increment Level"
+                    options="{'no_open': True, 'no_create': True}" />
+            </field>
         </field>
     </record>
-
 </odoo>
