--- a/custom-addons/hr_performance_measure/views/menu.xml
+++ b/custom-addons/hr_performance_measure/views/menu.xml
@@ -6,8 +6,8 @@
         parent="menu_performance_root" sequence="10" />
     <menuitem id="menu_performance_configuration" name="Configuration"
         parent="menu_performance_root" sequence="10" />
-    <menuitem id="menu_performance_configuration_period" name="Period"
-        parent="menu_performance_configuration" action="action_performance_measure" />
+    <menuitem id="menu_performance_period" parent="menu_performance_configuration" name="Periods"
+        action="action_performance_period" sequence="10" />
     <menuitem id="menu_performance_measure" name="Performance Measures"
         parent="menu_performance_management" action="action_performance_measure" sequence="10" />
 </odoo>
