--- a/custom-addons/hr_performance_measure/views/hr_performance_measure_view.xml
+++ b/custom-addons/hr_performance_measure/views/hr_performance_measure_view.xml
@@ -17,6 +17,7 @@
                         <page string="Performance Criteria">
                             <field name="criteria_ids">
                                 <tree editable="bottom">
+                                    <field name="factor_id" string="Factor"/>
                                     <field name="rating" required="1" string="Rating"/>
                                     <field name="score" readonly="1" string="Score"/>
                                 </tree>
